adds ContactModule and refactors contact features out of AppModule

--- a/app/contact/contact.component.html
+++ b/app/contact/contact.component.html
@@ -4,7 +4,7 @@
 <form *ngIf="contacts" (ngSubmit)="onSubmit()" #contactForm="ngForm">
   <h3 highlight>{{ contact.name | awesome }}</h3>
   <div class="form-group">
-    <label for="name">Name</label>l
+    <label for="name">Name</label>
     <input
       name="name"
       class="form-control"
