adds part of animation, battery is running low

--- a/app/heroes.component.html
+++ b/app/heroes.component.html
@@ -7,8 +7,9 @@
 </div>
 <ul class="heroes">
   <li *ngFor="let hero of heroes"
+    [@heroState]="hero.state"
     [class.selected]="selectedHero === hero"
-    (click)="onSelect(hero)">
+    (click)="onSelect(hero); hero.toggleState()">
     <span class="badge">{{hero.id}}</span> {{hero.name}}
     <button class="delete"
       (click)="delete(hero); $event.stopPropagation()">x</button>
