--- a/app/heroes.component.html
+++ b/app/heroes.component.html
@@ -9,7 +9,7 @@
   <li *ngFor="let hero of heroes"
     [@heroState]="hero.state"
     [class.selected]="selectedHero === hero"
-    (click)="onSelect(hero); hero.toggleState()">
+    (click)="onSelect(hero)">
     <span class="badge">{{hero.id}}</span> {{hero.name}}
     <button class="delete"
       (click)="delete(hero); $event.stopPropagation()">x</button>
